# nkn-sdk-cpp

./: CMakeLists.txt  nkn-sdk-cpp-websocketpp.patch
client/: client.h
include/: byteslice.h  serialize.h
include/crypto/: scrypt.h
